[gd_scene load_steps=55 format=3 uid="uid://b67objofffata"]

[ext_resource type="Script" path="res://Scripts/Game/GameManager.gd" id="1_kg5ow"]
[ext_resource type="Script" path="res://Scripts/Menus/Pause.gd" id="2_wp568"]
[ext_resource type="Theme" uid="uid://dits1em4vvtmn" path="res://Resources/Themes/main_theme.tres" id="2_wu3ge"]
[ext_resource type="PackedScene" uid="uid://d1n1vaf2ixggm" path="res://Nodes/item.tscn" id="5_2a8bf"]
[ext_resource type="Script" path="res://Scripts/Game/Gameplay.gd" id="5_fyqy3"]
[ext_resource type="Script" path="res://Scripts/Game/Inventory.gd" id="5_i1b0s"]
[ext_resource type="Resource" uid="uid://daa1811hrvvim" path="res://Resources/Items/Anvil.tres" id="7_blddn"]
[ext_resource type="Script" path="res://Scripts/Game/ItemData.gd" id="7_oayf1"]
[ext_resource type="Resource" uid="uid://dtjs3rtl5d283" path="res://Resources/Items/Banana.tres" id="8_fqo2m"]
[ext_resource type="FontFile" uid="uid://cai8wo1tl3hn1" path="res://Assets/Art/Fonts/Gambado Sans Forte.ttf" id="9_4fqgx"]
[ext_resource type="Resource" uid="uid://chnsoufscs30n" path="res://Resources/Items/Black Cushion.tres" id="9_egn5g"]
[ext_resource type="Texture2D" uid="uid://bpkfi0peeem7v" path="res://Assets/Art/UI/item selection paper landscape.png" id="9_utulr"]
[ext_resource type="Resource" uid="uid://btmy512yppdvs" path="res://Resources/Items/Bottle.tres" id="10_q6a7x"]
[ext_resource type="PackedScene" uid="uid://c8egp2jyspprx" path="res://Nodes/Scenes/world.tscn" id="10_tuhib"]
[ext_resource type="Texture2D" uid="uid://b7swl1klf0mor" path="res://Assets/Art/UI/item selection circle.png" id="10_v7vgk"]
[ext_resource type="Resource" uid="uid://2e4h3xj0uvvu" path="res://Resources/Items/Cogs.tres" id="11_lvuo1"]
[ext_resource type="Texture2D" uid="uid://dv380ytd6gkrw" path="res://Assets/Art/UI/tick1.png" id="11_o03g7"]
[ext_resource type="Texture2D" uid="uid://c753t08jpylsf" path="res://Assets/Art/UI/item selection tickbox_grey.png" id="11_v2vnh"]
[ext_resource type="Resource" uid="uid://cub2a75qqndh1" path="res://Resources/Items/Cube.tres" id="12_gppo1"]
[ext_resource type="Texture2D" uid="uid://xia0bpupbloe" path="res://Assets/Art/UI/item selection tickbox pressed state.png" id="12_hs4pd"]
[ext_resource type="Texture2D" uid="uid://dxbdyc2errahv" path="res://Assets/Art/UI/tick2.png" id="12_ot7ao"]
[ext_resource type="Resource" uid="uid://3rn4fa7nnr3o" path="res://Resources/Items/Engine.tres" id="13_45bh0"]
[ext_resource type="Texture2D" uid="uid://camxjj63qa07y" path="res://Assets/Art/UI/item selection tickbox.png" id="13_jbgsf"]
[ext_resource type="Texture2D" uid="uid://ch4t710m6ke7a" path="res://Assets/Art/UI/tick3.png" id="13_x7i0e"]
[ext_resource type="Resource" uid="uid://dntm2ljcnjxpe" path="res://Resources/Items/Fez.tres" id="14_nui3n"]
[ext_resource type="Texture2D" uid="uid://cnktg38agki07" path="res://Assets/Art/UI/cross1.png" id="14_qra74"]
[ext_resource type="Resource" uid="uid://boiv2r0oppdot" path="res://Resources/Items/Flask.tres" id="15_bgmkm"]
[ext_resource type="Texture2D" uid="uid://1i0wn6okr5xa" path="res://Assets/Art/UI/cross2.png" id="15_ec83r"]
[ext_resource type="Texture2D" uid="uid://bj2vnx70ffyi" path="res://Assets/Art/UI/monkey opinion sheet paper.png" id="16_c16ci"]
[ext_resource type="Resource" uid="uid://bcrx62ncffqfu" path="res://Resources/Items/Flower.tres" id="16_cxki4"]
[ext_resource type="Texture2D" uid="uid://bcmix5v06v2eo" path="res://Assets/Art/UI/cross3.png" id="16_xhd3u"]
[ext_resource type="Resource" uid="uid://cj650ygyr8d5v" path="res://Resources/Items/Fork.tres" id="17_gfrok"]
[ext_resource type="Resource" uid="uid://c04aqr8uid76m" path="res://Resources/Items/Green Tshirt.tres" id="18_agd2f"]
[ext_resource type="Resource" uid="uid://cwpwrovomdvyl" path="res://Resources/Items/Red Car.tres" id="19_ese46"]
[ext_resource type="Resource" uid="uid://d3yyosxcpacn8" path="res://Resources/Items/Ruby.tres" id="20_i7bng"]
[ext_resource type="Resource" uid="uid://c047bwhb0kkxe" path="res://Resources/Items/Strawberry.tres" id="21_dgykf"]
[ext_resource type="Resource" uid="uid://dao2vd2ty1lqb" path="res://Resources/Items/Teddybear.tres" id="22_1odra"]
[ext_resource type="Resource" uid="uid://dmf4ygjdarpx4" path="res://Resources/Items/Toy Submarine.tres" id="23_hvry8"]
[ext_resource type="Texture2D" uid="uid://bbrcg40nc33g6" path="res://Assets/Art/Apes/orange.png" id="25_lnvx0"]
[ext_resource type="Texture2D" uid="uid://bctsewbm68p04" path="res://Assets/Art/Apes/pink.png" id="26_5q6ic"]
[ext_resource type="Texture2D" uid="uid://bmfal57aby0n8" path="res://Assets/Art/Apes/purple.png" id="27_ufp61"]
[ext_resource type="Texture2D" uid="uid://toy8f5m0w31w" path="res://Assets/Art/Apes/blue.png" id="28_k8sgf"]
[ext_resource type="Script" path="res://Scripts/Game/Camera.gd" id="29_cgfhv"]

[sub_resource type="Gradient" id="Gradient_mxntj"]
offsets = PackedFloat32Array(0.214286, 0.792208)
colors = PackedColorArray(0.239216, 0.133333, 0, 0.298039, 0.239216, 0.133333, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wbha7"]
gradient = SubResource("Gradient_mxntj")
width = 256
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_nkd36"]
offsets = PackedFloat32Array(0.214286)
colors = PackedColorArray(0.239216, 0.133333, 0, 0.0980392)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tuti5"]
gradient = SubResource("Gradient_nkd36")
width = 256
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lr3ix"]
bg_color = Color(0.875, 0.857197, 0.841919, 1)

[sub_resource type="Theme" id="Theme_frco7"]
default_font = ExtResource("9_4fqgx")
Panel/styles/panel = SubResource("StyleBoxFlat_lr3ix")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_shg7a"]
texture = ExtResource("11_v2vnh")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_34wyl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7e4uj"]
texture = ExtResource("12_hs4pd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pkolx"]
texture = ExtResource("13_jbgsf")

[sub_resource type="Theme" id="Theme_28qkg"]
Button/styles/disabled = SubResource("StyleBoxTexture_shg7a")
Button/styles/focus = SubResource("StyleBoxEmpty_34wyl")
Button/styles/hover = SubResource("StyleBoxTexture_7e4uj")
Button/styles/normal = SubResource("StyleBoxTexture_pkolx")
Button/styles/pressed = SubResource("StyleBoxTexture_7e4uj")

[node name="Game" type="Node"]
script = ExtResource("1_kg5ow")

[node name="Pause" type="CanvasLayer" parent="."]
layer = 25
script = ExtResource("2_wp568")

[node name="c" type="Control" parent="Pause"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_wu3ge")

[node name="Panel" type="Panel" parent="Pause/c"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -175.0
offset_right = 143.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="Pause/c/Panel"]
layout_mode = 0
offset_left = 39.0
offset_top = 24.0
offset_right = 231.0
offset_bottom = 98.0
text = "RESUME
"

[node name="Options" type="Button" parent="Pause/c/Panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 133.0
offset_right = 228.0
offset_bottom = 207.0
text = "OPTIONS
"

[node name="MainMenu" type="Button" parent="Pause/c/Panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 244.0
offset_right = 228.0
offset_bottom = 318.0
text = "MAIN MENU
"

[node name="Shadow" type="Sprite2D" parent="Pause/c"]
z_index = -1
position = Vector2(956, 542)
scale = Vector2(2.88281, 7.54687)
texture = SubResource("GradientTexture2D_wbha7")

[node name="Shadow2" type="Sprite2D" parent="Pause/c"]
z_index = -1
position = Vector2(966, 534.5)
scale = Vector2(7.79687, 9.33594)
texture = SubResource("GradientTexture2D_tuti5")

[node name="Gameplay" type="CanvasLayer" parent="."]
script = ExtResource("5_fyqy3")
itemIns = ExtResource("5_2a8bf")
itemList = Array[ExtResource("7_oayf1")]([ExtResource("7_blddn"), ExtResource("8_fqo2m"), ExtResource("9_egn5g"), ExtResource("10_q6a7x"), ExtResource("11_lvuo1"), ExtResource("12_gppo1"), ExtResource("13_45bh0"), ExtResource("14_nui3n"), ExtResource("15_bgmkm"), ExtResource("16_cxki4"), ExtResource("17_gfrok"), ExtResource("18_agd2f"), ExtResource("19_ese46"), ExtResource("20_i7bng"), ExtResource("21_dgykf"), ExtResource("22_1odra"), ExtResource("23_hvry8")])

[node name="World" parent="Gameplay" instance=ExtResource("10_tuhib")]

[node name="Apes" type="Node3D" parent="Gameplay"]

[node name="Main" type="Sprite3D" parent="Gameplay/Apes"]
transform = Transform3D(-6.55671e-09, 0, -0.15, 0, 0.15, 0, 0.15, 0, -6.55671e-09, -40.7887, 6.32409, -1.94137)
texture = ExtResource("25_lnvx0")

[node name="Shape" type="Sprite3D" parent="Gameplay/Apes"]
transform = Transform3D(0.0261581, 0, -0.147702, 0, 0.15, 0, 0.147702, 0, 0.0261581, -41.1579, 5.7642, 1.32954)
texture = ExtResource("26_5q6ic")

[node name="Colour" type="Sprite3D" parent="Gameplay/Apes"]
transform = Transform3D(0.0676246, 0, -0.133891, 0, 0.15, 0, 0.133891, 0, 0.0676246, -40.2759, 5.96637, 4.36872)
texture = ExtResource("27_ufp61")

[node name="Colour2" type="Sprite3D" parent="Gameplay/Apes"]
transform = Transform3D(-0.0538676, 0, -0.139994, 0, 0.15, 0, 0.139994, 0, -0.0538676, -40.8191, 5.87665, -6.57301)
texture = ExtResource("28_k8sgf")

[node name="Camera" type="Camera3D" parent="Gameplay"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -25.706, 5.779, -1.403)
script = ExtResource("29_cgfhv")
spawnPos = Vector3(-24.54, 5.779, -1.403)
standPos = Vector3(-29.546, 5.779, -1.403)

[node name="c" type="Control" parent="Gameplay"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_frco7")

[node name="Inventory" type="Panel" parent="Gameplay/c"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_i1b0s")
ticks = Array[Texture2D]([ExtResource("11_o03g7"), ExtResource("12_ot7ao"), ExtResource("13_x7i0e")])
crosses = Array[Texture2D]([ExtResource("14_qra74"), ExtResource("15_ec83r"), ExtResource("16_xhd3u")])

[node name="ItemSelectionPaperLandscape" type="TextureRect" parent="Gameplay/c/Inventory"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("9_utulr")

[node name="Circle" type="TextureRect" parent="Gameplay/c/Inventory"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("10_v7vgk")

[node name="Description" type="Control" parent="Gameplay/c/Inventory"]
anchors_preset = 0
offset_left = 664.0
offset_top = 795.0
offset_right = 1189.0
offset_bottom = 973.0

[node name="Name" type="Label" parent="Gameplay/c/Inventory/Description"]
layout_mode = 0
offset_left = 36.0
offset_top = 14.0
offset_right = 532.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "NAME"

[node name="Desc" type="Label" parent="Gameplay/c/Inventory/Description"]
layout_mode = 0
offset_left = 39.0
offset_top = 69.0
offset_right = 529.0
offset_bottom = 168.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "NAME"
autowrap_mode = 2

[node name="GiveItem" type="Button" parent="Gameplay/c/Inventory"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 656.0
offset_top = -262.0
offset_right = 800.0
offset_bottom = -131.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_28qkg")

[node name="SelectedCircle" type="Panel" parent="Gameplay/c/Inventory"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1344.0
offset_top = 778.0
offset_right = 1543.0
offset_bottom = 968.0

[node name="Bag" type="Panel" parent="Gameplay/c/Inventory"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 552.0
offset_top = 98.0
offset_right = 1757.0
offset_bottom = 753.0

[node name="Clues" type="TextureButton" parent="Gameplay/c/Inventory"]
layout_mode = 0
offset_left = 7.0
offset_top = 156.0
offset_right = 649.0
offset_bottom = 871.0
texture_normal = ExtResource("16_c16ci")

[node name="Day1Item" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 56.0
offset_top = 240.0
offset_right = 144.0
offset_bottom = 326.0
expand_mode = 1

[node name="Day1Color" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 171.0
offset_top = 227.0
offset_right = 259.0
offset_bottom = 313.0
expand_mode = 1

[node name="Day1Shape" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 301.0
offset_top = 209.0
offset_right = 389.0
offset_bottom = 295.0
expand_mode = 1

[node name="Day1Material" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 438.0
offset_top = 199.0
offset_right = 526.0
offset_bottom = 285.0
expand_mode = 1

[node name="Day2Item" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 78.0
offset_top = 387.0
offset_right = 166.0
offset_bottom = 473.0
expand_mode = 1

[node name="Day2Color" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 202.0
offset_top = 378.0
offset_right = 290.0
offset_bottom = 464.0
expand_mode = 1

[node name="Day2Shape" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 321.0
offset_top = 361.0
offset_right = 409.0
offset_bottom = 447.0
expand_mode = 1

[node name="Day2Material" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 464.0
offset_top = 347.0
offset_right = 552.0
offset_bottom = 433.0
expand_mode = 1

[node name="Day3Item" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 108.0
offset_top = 541.0
offset_right = 196.0
offset_bottom = 627.0
expand_mode = 1

[node name="Day3Item2" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 231.0
offset_top = 537.0
offset_right = 319.0
offset_bottom = 623.0
expand_mode = 1

[node name="Day3Item3" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 330.0
offset_top = 533.0
offset_right = 418.0
offset_bottom = 619.0
expand_mode = 1

[node name="Day3Item4" type="TextureRect" parent="Gameplay/c/Inventory/Clues"]
layout_mode = 0
offset_left = 450.0
offset_top = 521.0
offset_right = 538.0
offset_bottom = 607.0
expand_mode = 1

[connection signal="pressed" from="Pause/c/Panel/Resume" to="Pause" method="ResumePressed"]
[connection signal="pressed" from="Pause/c/Panel/Options" to="Pause" method="OptionsPressed"]
[connection signal="pressed" from="Pause/c/Panel/MainMenu" to="Pause" method="MainMenuPressed"]
[connection signal="pressed" from="Gameplay/c/Inventory/GiveItem" to="Gameplay/c/Inventory" method="GiveItem"]
